[package]
name = "core"
version = "0.1.0"
authors = ["xiaohuo <xiaohuo200@gmail.com>"]
edition = "2018"

[dependencies]
peer = { path= "../peer" }
storage = { path="../storage"}
netmux = { path="../netmux"}
routing = { path="../routing"}
bitswap = { path="../bitswap"}
blocks= { path="../blocks"}
path = { path="../path"}