[package]
name = "merkledag"
version = "0.1.0"
authors = ["xiaohuo <xiaohuo200@gmail.com>"]
edition = "2018"

[dependencies]
multihash = { git = "https://github.com/renlulu/rust-multihash" }
cid = { git = "https://github.com/renlulu/rust-cid.git" }
protobuf = "1.4"
bincode = "1.1.1"
serde_derive = "1.0.87"
serde = "1.0.87"
